human_written_tests/WebAssembly/processed_control_flow_validation/test_if_104.wast
(assert_malformed
  (module quote "(func (param i32) (result i32) if (param $x i32) end)")
  "unexpected token"
)